--- a/css/style.scss
+++ b/css/style.scss
@@ -17,18 +17,22 @@ MIXINS
 
 @mixin configQuote($color, $image) {
     background-color: $color;
-        
         &::before {
             content: '';
             opacity: .5;
             display: block;
-            width: 15%;
-            min-height: 70px;
+            min-width: 60px;
+            min-height: 60px;
             margin-right: 25px;
             background-image: url('../img/#{$image}.svg');
-            background-position: center center;
+            background-position: left center;
             background-repeat: no-repeat;
         }
+    @media (max-width: 550px) {
+        &::before {
+            margin-bottom: 10px
+        }
+    }
 }
 
 @mixin emojiTitles($unicode, $color: $colorGeneral) {
@@ -55,6 +59,8 @@ ESTILOS GENERALES
 
 .courtyard {
     h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
+        margin-block-start: 1em;
+        margin-block-end: 0.3em;
         font-family: 'Poppins';
         color: $colorGeneral;
     }
@@ -62,15 +68,15 @@ ESTILOS GENERALES
     .__h2 {
         font-weight: bold;
         font-size: 22px!important;
-        margin: 19px 0!important;
+        /* margin: 19px 0!important; */
     }
     
     .__h3 {
-        font-size: 18.5px!important;
+        /* font-size: 18.5px!important; */
     }
     
     p {
-        margin-bottom: 18px!important;
+        margin: 0.3em 0 0.6em 0!important;
     }
     
     p, small, ul, li {
@@ -146,6 +152,7 @@ SECCIÓN TARJETAS PROFES
         border: 1px solid #E6E6E6;
         border-radius: 7px;
         transition: all 0.25s ease-in-out;
+        max-height: 200px;
 
         & + .__wrapper-tarjeta {
             margin-top: 25px;
@@ -153,7 +160,7 @@ SECCIÓN TARJETAS PROFES
 
         img {
             border-radius: 7px 0 0 7px;
-            width: 30%;
+            max-height: 200px;
         }
         .__combo-texto {
             width: 70%;
@@ -169,13 +176,6 @@ SECCIÓN TARJETAS PROFES
                 font-size: 16px;
                 justify-self: flex-end;
             }
-        }
-
-        &:hover {
-            transform: translateY(-5px);
-            box-shadow:
-                0 10px 20px rgba(0,0,0,0.14),
-                0 6px 6px rgba(0,0,0,0.18);
         }
     }
 }
@@ -272,11 +272,10 @@ QUOTES
     align-items: center;
     justify-content: space-between;
     border-radius: 7px;
-    padding: 25px;
+    padding: 30px 40px;
     margin-bottom: 25px;
     
     p {
-        width: 85%;
         color: #fff;
         font-size: 16px;
         font-weight: 500;
@@ -294,7 +293,7 @@ QUOTES
         flex-direction: column;
 
         p {
-            margin-bottom: 0;
+            margin: 15px 0 5px 0!important;
         }
     }
 }
