--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@ MIXINS
 /* ============================================
 FUENTES
     - Titulos: Rajdhani
-    - Párrafos: Source Sans Pro
+    - Párrafos: Open Sans
 ============================================ */
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Rajdhani:wght@400;700&display=swap");
 /* ============================================
 ESTILOS GENERALES
 ============================================ */
@@ -32,7 +32,7 @@ ESTILOS GENERALES
 }
 
 .courtyard p, .courtyard small, .courtyard ul, .courtyard li {
-  font-family: 'Source Sans Pro';
+  font-family: 'Open Sans';
   font-size: 16.5px !important;
   line-height: 1.4em;
   color: #5a5a5a;
