--- a/css/style.scss
+++ b/css/style.scss
@@ -47,11 +47,11 @@ MIXINS
 /* ============================================
 FUENTES
     - Titulos: Rajdhani
-    - Párrafos: Source Sans Pro
+    - Párrafos: Open Sans
 ============================================ */
 
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Rajdhani:wght@400;700&display=swap');
 
 /* ============================================
 ESTILOS GENERALES
@@ -75,7 +75,7 @@ ESTILOS GENERALES
     }
     
     p, small, ul, li {
-        font-family: 'Source Sans Pro';
+        font-family: 'Open Sans';
         font-size: 16.5px!important;
         line-height: 1.4em;
         color: $colorGeneral
