--- a/css/style.scss
+++ b/css/style.scss
@@ -63,11 +63,15 @@ ESTILOS GENERALES
         margin-block-end: 0.3em;
         font-family: 'Rajdhani', sans-serif;
         color: $colorGeneral;
+        font-weight: bold;
     }
 
-    .__h2 {
-        font-weight: bold;
-        font-size: 22px!important;
+    h2, .__h2 {
+        font-size: 24px!important;
+    }
+
+    h3, .__h3 {
+        font-size: 20px!important;
     }
     
     p {
@@ -76,7 +80,7 @@ ESTILOS GENERALES
     
     p, small, ul, li {
         font-family: 'Open Sans';
-        font-size: 16.5px!important;
+        font-size: 15px!important;
         line-height: 1.4em;
         color: $colorGeneral
     }
@@ -161,7 +165,6 @@ SECCIÓN TARJETAS PROFES
             width: 70%;
             padding: 20px 30px;
             .__h3 {
-                font-weight: normal;
                 margin-top: 0;
             }
             p {
@@ -241,7 +244,6 @@ SECCIÓN DOS COLUMNAS
     .__columna {
         width: 47%;
         .__h3 {
-            font-weight: normal;
             margin: 0;
         }
         p {
