--- a/css/style.scss
+++ b/css/style.scss
@@ -57,43 +57,41 @@ FUENTES
 ESTILOS GENERALES
 ============================================ */
 
-.courtyard {
-    h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
-        margin-block-start: 1em;
-        margin-block-end: 0.3em;
-        font-family: 'Rajdhani', sans-serif;
-        color: $colorGeneral;
-        font-weight: bold;
-    }
+h1, h2, h3, h4, h5, h6, .__h2, .__h3 {
+    margin-block-start: 1em;
+    margin-block-end: 0.3em;
+    font-family: 'Rajdhani', sans-serif;
+    color: $colorGeneral;
+    font-weight: bold;
+}
 
-    h2, .__h2 {
-        font-size: 24px!important;
-    }
+h2, .__h2 {
+    font-size: 24px!important;
+}
 
-    h3, .__h3 {
-        font-size: 20px!important;
+h3, .__h3 {
+    font-size: 20px!important;
+}
+
+p {
+    margin: 0.3em 0 0.6em 0!important;
+}
+
+p, small, ul, li {
+    font-family: 'Open Sans';
+    font-size: 15px!important;
+    line-height: 1.4em;
+    color: $colorGeneral
+}
+
+ul {
+    li {
+        margin-bottom: 5px;
     }
-    
-    p {
-        margin: 0.3em 0 0.6em 0!important;
-    }
-    
-    p, small, ul, li {
-        font-family: 'Open Sans';
-        font-size: 15px!important;
-        line-height: 1.4em;
-        color: $colorGeneral
-    }
-    
-    ul {
-        li {
-            margin-bottom: 5px;
-        }
-    }
-    
-    [class^="__seccion"] {
-        margin-bottom: 20px;
-    }
+}
+
+[class^="__seccion"] {
+    margin-bottom: 20px;
 }
 
 /* ============================================
@@ -101,7 +99,7 @@ TITULOS CON EMOJI :)
 http://www.unicode.org/emoji/charts/full-emoji-list.html
 ============================================ */
 
-.courtyard .__h2.__emoji {
+.__h2.__emoji {
 
     &.__fire { @include emojiTitles('\1F525', $colorAlerta) }
     &.__movie-camera { @include emojiTitles('\1F3AC') }
@@ -124,7 +122,7 @@ SECCIÓN CÓDIGO
     - Bloque de código (.__wrapper-codigo)
 ============================================ */
 
-.courtyard .__seccion-codigo {
+.__seccion-codigo {
     .__wrapper-codigo {
         min-height: 50px;
         padding: 10px;
@@ -144,7 +142,7 @@ SECCIÓN TARJETAS PROFES
             - Mail <small>
 ============================================ */
 
-.courtyard .__seccion-tarjetas {
+.__seccion-tarjetas {
     .__wrapper-tarjeta {
         display: flex;
         align-items: center;
@@ -179,7 +177,7 @@ SECCIÓN TARJETAS PROFES
 }
 
 @media (max-width: 680px) {
-    .courtyard .__seccion-tarjetas {
+    .__seccion-tarjetas {
         .__wrapper-tarjeta {
             .__combo-texto {
                 p {
@@ -196,7 +194,7 @@ SECCIÓN LISTADO DE CHECKS
         - Items <li>
 ============================================ */
 
-.courtyard .__seccion-check {
+.__seccion-check {
     ul {
         padding-inline-start: 30px;
         list-style-type: none;
@@ -226,7 +224,7 @@ SECCIÓN DOS COLUMNAS
         - Párrafo <p>
 ============================================ */
 
-.courtyard .__seccion-dos-columnas {
+.__seccion-dos-columnas {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -253,7 +251,7 @@ SECCIÓN DOS COLUMNAS
 }
 
 @media (max-width: 700px) {
-    .courtyard > .__seccion-dos-columnas {
+    > .__seccion-dos-columnas {
         .__columna {
             width: 100%;
         }
@@ -264,7 +262,7 @@ SECCIÓN DOS COLUMNAS
 QUOTES
 ============================================ */
 
-.courtyard .__quote {
+.__quote {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -285,7 +283,7 @@ QUOTES
 }
 
 @media (max-width: 550px) {
-    .courtyard .__quote {
+    .__quote {
         align-items: flex-start;
         flex-direction: column;
 
